Fix politician row element text alignment and remover scroller centering (#36)

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -265,7 +265,7 @@
       align-items: center;
 
       > span {
-        justify-self: right;
+        text-align: right;
       }
     }
   }
